# AirBrakes

./: .gitignore  README.md
Desktop/: apogee.c  filter.c  gen_data.c  makefile  matrix_functions.c  matrix_functions.h
ESP/: README.md  flight_com_v1.ino  sensor-test.ino
ESP/controlled_LKF/: controlled_LKF.cpp  controlled_LKF.h
ESP/mahony/: mahony.cpp  mahony.h
ESP/matrix_functions/: matrix_functions.cpp  matrix_functions.h
ESP/sensor-test/: sensor-test.ino
ESP_P4/flight_com_v2/: CMakeLists.txt  todo.txt
ESP_P4/flight_com_v2/components/adxl375/: CMakeLists.txt  adxl375.c
ESP_P4/flight_com_v2/components/apogee/: CMakeLists.txt  apogee.c
ESP_P4/flight_com_v2/components/bmp390/: CMakeLists.txt
ESP_P4/flight_com_v2/components/controlled_LKF/: CMakeLists.txt  controlled_LKF.c
ESP_P4/flight_com_v2/components/icm20948-master/: CMakeLists.txt  icm20948_i2c.c  icm20948_i2c.h
ESP_P4/flight_com_v2/components/lib/: adxl375.h  apogee.h  controlled_LKF.h  mahony.h  matrix_functions.h  new_LKF.h
ESP_P4/flight_com_v2/components/mahony/: CMakeLists.txt  mahony.c
ESP_P4/flight_com_v2/components/matrix_functions/: CMakeLists.txt  matrix_functions.c
ESP_P4/flight_com_v2/components/new_LKF/: new_LKF.c
ESP_P4/flight_com_v2/components/sd_card/: CMakeLists.txt  sd_test_io.c  sd_test_io.h
ESP_P4/flight_com_v2/main/: CMakeLists.txt  apogee_pie.S  apogee_pie.txt  esp32p4wifi6webpage.html  idf_component.yml  main.c
ESP_S3/: apogee.c  apogee.h
Icarus Angle Table/: angleTable.c  angleTable.h  angleTablePreprocessing.c  makefile
